--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load urlify %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}
 {{ instance.title }} | {{ block.super }}
@@ -41,6 +42,10 @@
 <!--</a>-->
     <div>
         <p class="lead">Comments</p>
+        <form method="POST" action="."> {% csrf_token %}
+            {{ comment_form|crispy }}
+            <input type="submit" value="Post comment" class="btn btn-default">
+        </form>
         <hr/>
         {% for comment in comments %}
             <blockquote>
